--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!doctype html>
 <html>
-<head>
-	<title>Test PhoneGap</title>
-</head>
-<body>
-<p>Test Internet</p>
-	
-<script src = 'js/zepto.min.js'></script>
-<script src = 'js/TEST.js'></script>
-<script>
-// Wait for PhoneGap to load
-// 
-document.addEventListener("deviceready", onDeviceReady, false);
-onDeviceReady();
-</script>
-</body>
+  <head>
+    <title>navigator.network.connection.type Example</title>
+    <script type="text/javascript" charset="utf-8" src="js/phonegap-1.0.0.js"></script>
+    <script type="text/javascript" charset="utf-8">
+    // Wait for PhoneGap to load
+    document.addEventListener("deviceready", onDeviceReady, false);
+    function onDeviceReady() {
+        checkConnection();
+    }
 
-</html>
+    function checkConnection() {
+        var networkState = navigator.network.connection.type;
+        var states = {};
+        states[Connection.UNKNOWN]  = 'Unknown connection';
+        states[Connection.ETHERNET] = 'Ethernet connection';
+        states[Connection.WIFI]     = 'WiFi connection';
+        states[Connection.CELL_2G]  = 'Cell 2G connection';
+        states[Connection.CELL_3G]  = 'Cell 3G connection';
+        states[Connection.CELL_4G]  = 'Cell 4G connection';
+        states[Connection.NONE]     = 'No network connection';
+        alert('Connection type: ' + states[networkState]);
+    }
+    </script>
+  </head>
+  <body>
+    <p>A dialog box will report the network state.</p>
+  </body>
+</html
